--- a/pyproject.toml
+++ b/pyproject.toml
@@ -3,14 +3,18 @@ name = "vq-vae-with-geodesic-quantization"
 version = "0.1.0"
 description = "Add your description here"
 readme = "README.md"
-requires-python = ">=3.12"
+requires-python = ">=3.9"
 dependencies = [
-    "matplotlib>=3.10.5",
-    "numpy>=2.3.2",
+    "matplotlib>=3.9.4",
+    "numpy==1.26.4",
     "opencv-python>=4.11.0.86",
+    "scikit-learn>=1.6.1",
+    "seaborn>=0.13.2",
     "torch>=2.7.1",
     "torchaudio>=2.7.1",
     "torchvision>=0.22.1",
+    "umap-learn>=0.5.9.post2",
+    "numba==0.59.1",
 ]
 
 [tool.uv.sources]
