--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,12 +9,14 @@ dependencies = [
     "numpy==1.26.4",
     "opencv-python>=4.11.0.86",
     "scikit-learn>=1.6.1",
+    "scipy>=1.11.4",
     "seaborn>=0.13.2",
     "torch>=2.7.1",
     "torchaudio>=2.7.1",
     "torchvision>=0.22.1",
     "umap-learn>=0.5.9.post2",
     "numba==0.59.1",
+    "pandas>=2.3.1",
 ]
 
 [tool.uv.sources]
